Fix wrong margin in header navigation

--- a/src/less/components/header-navigation.less
+++ b/src/less/components/header-navigation.less
@@ -14,6 +14,7 @@
     
     > .nav-links > li {
         display: inline-block;
+        margin: 0;
     }
     
     > .nav-links > li > a {
